--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite:  
+  path:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  firebase_auth: ^0.18.2
-  cloud_firestore: ^0.14.2
 
 dev_dependencies:
 
