--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite:  
-  path:
+  firebase_auth: ^0.18.2
+  firebase_core: ^0.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  cloud_firestore: ^0.14.2
+  firebase_database: ^4.4.0
 
 dev_dependencies:
 
